# qemu_riscv_fw

qemu_riscv64/: CMakeLists.txt  prj.conf
qemu_riscv64/drivers/inc/: gpio.h  mmio.h  timer.h
qemu_riscv64/drivers/src/: gpio.c  timer.c  uart.c
qemu_riscv64/hal/inc/: hal_gpio.h  hal_timer.h  hal_uart.h
qemu_riscv64/hal/src/: hal_uart.c
qemu_riscv64/src/: main.c
riscv64/: CmakeLists.txt  linker.ld  main.c  start.s
riscv64/app/: test.c
riscv64/drivers/: CmakeLists.txt  gpio.c  mmio.c  timer.c  uart.c
riscv64/drivers/inc/: uart.h
riscv64/drivers/src/: mmio.c
riscv64/hal/: CmakeLists.txt
riscv64/hal/src/: hal_timer.c
scripts/: build_qemu_riscv64.sh  setup_zephyr.sh
